# task-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml  rig.yaml  task.yaml
.github/workflows/: ci.yml  test-cli.yml  vendored-hook-drift.yml
docs/: 2026-06-15-task-cli-spec.md
scripts/: resync_vendored_hook.py
tasklib/: __init__.py  __main__.py  classify.py  cli.py  config.py  credentials.py  daemon.py  gantt.py  install.py  logging.py  manifest.py  model.py  pager.py  policy.py  projects.py  quality.py  references.py  render.py  session.py  textwidth.py  transitions.py
tasklib/backends/: __init__.py  github_issues.py  http.py  linear.py
test/docker/: Dockerfile  README.md  agent_test.sh  agent_tools_gating.sh  assertions.sh  enforce_test.sh  entrypoint.sh  mock_github.py  require_ticket_before_commit.py
tests/: conftest.py  smoke.sh  test_backends.py  test_classify.py  test_cli.py  test_cli_non_repo.py  test_config.py  test_credentials.py  test_daemon.py  test_gantt.py  test_install.py  test_list_pager.py  test_manifest.py  test_pager.py  test_policy.py  test_projects.py  test_quality.py  test_references.py  test_render.py  test_session.py  test_textwidth.py  test_transitions.py  test_vendored_hook_sync.py  test_version.py
